[package]
name = "github-mcp"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.13.4", features = ["json"] }
rmcp = { version = "1.7.0", features = ["server", "macros", "schemars", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
urlencoding = "2.1.3"
